<resources>
    <string name="app_name">Тотализатор 2022</string>

    <string name="description_photo">Фото</string>
    <string name="url">Имя ресурса</string>

    <string name="action_exit">Выход</string>
    <string name="action_admin">Админка</string>

    <string name="menu_prognosis">Прогноз</string>
    <string name="menu_gamblers">Участники</string>
    <string name="menu_rating">Рейтинг</string>
    <string name="menu_profile">Профиль</string>

    <string name="auth">Авторизация</string>
    <string name="signup">Регистрация</string>
    <string name="email">email</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтверждение пароля</string>
    <string name="enter">Войти</string>
    <string name="register">Зарегистрировать</string>
    <string name="remark_about_registration"><u>Нажмите здесь, чтобы зарегистрироваться</u></string>

    <string name="save">Сохранить</string>

    <string name="error_all_required">Все поля должны быть заполнены</string>
    <string name="error_field_empty">Поле \"%1$s\" должно быть заполнено</string>
    <string name="error_min_length">Длина поля \"%1$s\" должна быть не меньше %2$d</string>
    <string name="error_confirm_password">Пароли должны совпадать</string>

    <string name="nickname">НИК</string>
    <string name="family">Фамилия</string>
    <string name="name">Имя</string>
    <string name="gender">Пол</string>
    <string name="man">м</string>
    <string name="woman">ж</string>
</resources>