<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navGamblers"
            android:icon="@drawable/ic_gamblers"
            android:title="@string/menu_gamblers" />
        <item
            android:id="@+id/navRating"
            android:icon="@drawable/ic_rating"
            android:title="@string/menu_rating" />
        <item
            android:id="@+id/navPrognosis"
            android:icon="@drawable/ic_prognosis"
            android:title="@string/menu_prognosis" />
        <item
            android:id="@+id/navProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
    </group>
</menu>